--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 alt="lol" width="30"> et <img
                 src="https://cdn.vectorstock.com/i/500p/74/05/pokemon-go-logo-icon-vector-23237405.jpg" alt="pokemon"
                 width="18"> </p>
+                <p>rien de particulier mais on est la</p>
 
 
 
