--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 src="https://cdn.vectorstock.com/i/500p/74/05/pokemon-go-logo-icon-vector-23237405.jpg" alt="pokemon"
                 width="18"> </p>
                 <p>rien de particulier mais on est la</p>
-                <p class="zob">grrrt baw</p>
+                <p class="zob">grrrt</p>
 
 
 
