lien vers la page contact

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.youtube.com/watch%3Fv%3DdQw4w9WgXcQ&ved=2ahUKEwi4ne7F_NqIAxVRRaQEHc5LNlYQwqsBegQIDhAG&usg=AOvVaw0aHtehaphMhOCAkCydRLZU">clique
                 tkt</a>
             <a href="autrepage.html"><img src="" alt="l'autre page" width="20"></a>
+            <a href="contact.html" >contact</a>
         </div>
 
     </header>
