--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header><div>
+        <a href="index.html">page principale</a>
+    </div>
     
+    </header>
 </body>
 
 
